# ozora

./: .gitignore  Cargo.toml  README.md  files.json  flake.nix  riscv_zicfiss.sail
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: lib.rs
sailrs/: Cargo.toml  build.rs
sailrs/src/: ffi.rs  lib.rs  types.rs
sailrs/src/sail_ast/: mod.rs
sailrs/wrapper/: wrapper.ml
src/: ast_util.rs  generate_decoder.rs  generate_module.rs  jib_util.rs  main.rs
src/ast_util/: csrs.rs  instruction.rs
src/generate_decoder/: instruction_definition.rs  parse_operand.rs
