[package]
name = "ozora"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"

[dependencies]
common = { path = "common", default-features = false, features = ["std"] }
sailrs = { path = "sailrs" }

clap = { version = "4.5.20", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
deepsize = "0.2.0"
log = "0.4.22"
regex = "1.11.1"
indoc = "2.0.5"
